# parallel-k-SVD

./: .gitignore  .gitmodules  Implementation Tests.ipynb  README.md  Runtime Analysis.ipynb  Serial Baseline.ipynb  Serial Baseline_k=300.ipynb  requirements.txt  test.py
2D_KSVD/baseline/: 2d_baseline.cpp  2d_baseline.ipynb  2d_baseline_cuda.cu  CMakeLists.txt  CMakeLists_cuda.txt  README.md  omp.ipynb
Experiments/: Runtime Analysis.ipynb  Runtime Analysis_k=300.ipynb  Runtime Comparison.ipynb  Serial Baseline_k=300.ipynb
Experiments/Benchmarking/: OMP Showdown Parallel.ipynb  OMP Showdown Thread Limit.ipynb  OMP Showdown Thread Limit_FP32.ipynb  OMP Showdown.ipynb  Plot.ipynb  Thread Scaling.ipynb  omp_benchmark.py  omp_benchmark_all.csv  omp_plotting.ipynb
Experiments/Denoising Comparisons/: Approx Serial V1_k=300.ipynb  Best Serial_k=300.ipynb  Numba_Approx_V2.ipynb  Para_Numba_Approx_V1.ipynb  Serial_V5.ipynb
Experiments/Denoising Comparisons/vs_sklearn/supervised/: Approx Serial V0_k=300.ipynb  Approx_V1_1.ipynb  Numba_Approx_V2.ipynb  Para_Numba_Approx_V1.ipynb  Serial Baseline.ipynb
Experiments/Numba/OMP_Implementations/: OMP_numba_parallel.py  OMP_numba_parallelTest.py  omp_numba_profiling.ipynb
Experiments/Numba/Runtime/: V5_numba.ipynb
Experiments/OMP Implementations/: Batch Test 1.ipynb  OMP Implementations 1-1.ipynb  OMP Implementations 1.ipynb  OMP Implementations 2-1.ipynb  OMP Implementations 2.ipynb  OMP Implementations 3-1.ipynb  OMP Implementations 3.ipynb  OMP Implementations 4.ipynb  OMP Implementations 5.ipynb
Experiments/Runtime Comparisons/: Runtime Comparison 4-1.ipynb  Runtime Comparison 4.ipynb  Runtime Comparison.ipynb
Experiments/Runtime Comparisons/AK-SVD/: Approx 1.ipynb  Approx 2 .ipynb  Approx 2.ipynb  NOTE.txt
Experiments/Runtime Comparisons/AK-SVD/T_0=20/: Approx_V1.ipynb  Approx_V1_1.ipynb  Numba_Approx_V1.ipynb
Experiments/Runtime Comparisons/K-SVD/: Runtime Comparison 4-3.ipynb
Experiments/Scaling_cpp/: comp_scaling.py  ksvd_scaling_strong.csv  ksvd_scaling_weak.csv  scaling_comp.py  scaling_comp_weak.py  scaling_m.py  weak_scaling.py
Experiments/Weak_Scaling/: strong_scaling.py
Implementations/: First_Serial.py  Serial_V2.py  Serial_V2_1.py  Serial_V3.py
Implementations/AK-SVD/: Approx_Serial_V1.py  Approx_V0.py  Approx_V1.py  Approx_V1_1.py
Implementations/AK-SVD-Parallel/: CMakeLists.txt  compile_commands.json  distorter.cpp  distorter.hpp  image_process.cpp  image_process.hpp  images  ksvd.cpp  ksvd.hpp  main.cpp  omp.cpp  omp.hpp  synth.cpp  synth.hpp
Implementations/AK-SVD-Serial/: CMakeLists.txt  distorter.hpp  ksvd.cpp  ksvd.hpp  omp.cpp
Implementations/AK_SVD/: Approx_V1.py  Approx_V1_1.py  Numba_Approx_V0.py  Numba_Approx_V1.py  Numba_Approx_V1_1.py  Numba_Approx_V2.py  Para_Numba_Approx_V0.py  Para_Numba_Approx_V1.py
Implementations/K-SVD/: Serial_V2_1.py  Serial_V3.py  Serial_V4.py  Serial_V4_1.py  Serial_V5.py
Implementations/K-SVD-Parallel/: CMakeLists.txt  distorter.cpp  image_process.hpp  images  ksvd.cpp  main.cpp  omp.cpp  omp.hpp
Implementations/K-SVD-Serial-V4/: CMakeLists.txt  image_process.cpp  ksvd.cpp  main.cpp  omp.cpp  omp.hpp
Implementations/K-SVD-Serial-V4/.cache/clangd/index/: distorter.cpp.63EBAB3ADCE705C5.idx  image_process.cpp.4CD17059E86876F6.idx  ksvd.cpp.57BFBE99874B1BF6.idx  main.cpp.AF06C4A9B6064751.idx  omp.cpp.638FE976F8083423.idx  omp.hpp.2E07F59CE3F2179A.idx
Implementations/K_SVD/: Serial_V1_1.py  Serial_V3_1.py  Serial_V5.py
comparison_folder/: Para_Numba_Approx_V1.py  benchmark.py
(+49 files in other folders)
